Fix dark mode for Concordia & formulad

--- a/src/css/games/concordia.less
+++ b/src/css/games/concordia.less
@@ -44,4 +44,19 @@ html[data-theme=dark] {
 	#button_undo:hover {
 		.redButtonOver();
 	}
+
+	.cia_playerDiscard {
+		border-color: var(--light-50);
+	}
+
+	#cia_mainMap,
+	.cia_card,
+	.playerBoard {
+		filter: var(--ext-bright);
+	}
+
+	#cia_mainMap *,
+	.playerBoard * {
+		filter: none;
+	}
 }
